--- a/locales/gtg-fr.po
+++ b/locales/gtg-fr.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: 2009-04-02 08:27+0000\n"
+"POT-Creation-Date: 2009-04-03 20:19+0200\n"
+"PO-Revision-Date: 2009-04-03 20:49+0000\n"
 "Last-Translator: Lionel Dricot <ploum@ploum.net>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-04-02 08:32+0000\n"
+"X-Launchpad-Export-Date: 2009-04-03 20:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/core/firstrun_tasks.py:6
@@ -84,9 +84,9 @@ msgid ""
 "subtask&quot; on the next line and press enter."
 msgstr ""
 "Dans la description de la tâche (cette fenêtre), si vous commencez une ligne "
-"avec  &quot;-&quot;, elle sera considérée comme &quot;sous-tâche&quot;, "
+"avec &quot;-&quot;, elle sera considérée comme &quot;sous-tâche&quot;, "
 "quelque chose à faire pour accomplir votre tâche. Essayez d'écrire &quot;- "
-"test sous-tâche&quot; dans la ligne suivante et appuyer sur Entrer."
+"test sous-tâche&quot; dans la ligne suivante et appuyer sur Entrée."
 
 #: GTG/core/firstrun_tasks.py:36
 msgid "You can also use the &quot;insert subtask&quot; button."
@@ -253,64 +253,139 @@ msgstr ""
 "Si vous avez un problème avec GTG, nous pouvons peut-être vous aider ou "
 "résoudre votre problème rapidement."
 
-#: GTG/taskeditor/editor.py:208
-msgid "Due tomorrow !"
-msgstr "Pour demain!"
+#: GTG/taskbrowser/__init__.py:29
+msgid "Mark as done"
+msgstr "Marquer comme fait"
 
-#: GTG/taskeditor/editor.py:210
-#, python-format
-msgid "%s days left"
-msgstr "Il reste %s jours"
+#: GTG/taskbrowser/__init__.py:30
+msgid "Mark the selected task as done"
+msgstr "Marquer la tâche sélectionnée comme faite"
 
-#: GTG/taskeditor/editor.py:212
-msgid "Due today !"
-msgstr "Pour aujourd'hui!"
-
-#: GTG/taskeditor/editor.py:214
-msgid "Due for yesterday"
-msgstr "Dépassé depuis hier"
-
-#: GTG/taskeditor/editor.py:216
-#, python-format
-msgid "Was %s days ago"
-msgstr "Dépassé depuis %s jours"
-
-#: GTG/taskeditor/taskeditor.glade.h:1
-msgid "<span weight=\"bold\">Due for</span>"
-msgstr "<span weight=\"bold\">A terminer pour</span>"
-
-#: GTG/taskeditor/taskeditor.glade.h:2
-msgid "<span weight=\"bold\">Starting on</span>"
-msgstr "<span weight=\"bold\">Commence le</span>"
-
-#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
-msgid "Delete"
-msgstr "Supprimer"
-
-#: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
+msgid "Mark as not done"
+msgstr "Marquer comme non fait"
+
+#: GTG/taskbrowser/__init__.py:32 GTG/taskbrowser/__init__.py:36
+msgid "Mark the selected task as to be done"
+msgstr "Marquer la tâche sélectionnée comme à faire"
+
+#: GTG/taskbrowser/__init__.py:33 GTG/taskbrowser/taskbrowser.glade.h:13
+#: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Dismiss"
 msgstr "Abandonner"
 
-#: GTG/taskeditor/taskeditor.glade.h:5
-msgid "Insert subtask"
-msgstr "Ajouter une sous-tâche"
+#: GTG/taskbrowser/__init__.py:34
+msgid "Mark the task as not to be done anymore"
+msgstr "Marquer la tâche sélectionnée comme à ne pas faire"
 
-#: GTG/taskeditor/taskeditor.glade.h:6
-msgid "Insert tag"
-msgstr "Ajouter une étiquette"
+#: GTG/taskbrowser/__init__.py:35
+msgid "Undismiss"
+msgstr "Annuler l'abandon"
 
-#: GTG/taskeditor/taskeditor.glade.h:7
-msgid "Keep as Note"
-msgstr "Conserver comme note"
+#: GTG/taskbrowser/__init__.py:37
+msgid "Permanently remove the selected task"
+msgstr "Supprimer la tâche sélectionnée de façon permanente"
 
-#: GTG/taskeditor/taskeditor.glade.h:8
-msgid "Mark Done"
-msgstr "Marquer comme fait"
+#: GTG/taskbrowser/browser.py:109
+msgid "Edit the selected task"
+msgstr "Modifier la tache selectionnée"
 
-#: GTG/taskeditor/taskeditor.glade.h:9
-msgid "Task"
-msgstr "Tâche"
+#: GTG/taskbrowser/browser.py:111 GTG/taskbrowser/taskbrowser.glade.h:10
+msgid "Create a new task"
+msgstr "Créer une nouvelle tâche"
+
+#: GTG/taskbrowser/browser.py:112
+msgid "Create a new subtask"
+msgstr "Créer une nouvelle tâche enfant"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "monday"
+msgstr "lundi"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "tuesday"
+msgstr "mardi"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "wednesday"
+msgstr "mercredi"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "thursday"
+msgstr "jeudi"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "friday"
+msgstr "vendredi"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "saturday"
+msgstr "samedi"
+
+#: GTG/taskbrowser/browser.py:559
+msgid "sunday"
+msgstr "dimanche"
+
+#: GTG/taskbrowser/browser.py:568
+msgid "today"
+msgstr "aujourd'hui"
+
+#: GTG/taskbrowser/browser.py:575
+msgid "tomorrow"
+msgstr "demain"
+
+#: GTG/taskbrowser/browser.py:636
+msgid "tags"
+msgstr "tags"
+
+#: GTG/taskbrowser/browser.py:639
+msgid "defer"
+msgstr "reporter"
+
+#: GTG/taskbrowser/browser.py:643
+msgid "due"
+msgstr "échéance"
+
+#: GTG/taskbrowser/browser.py:754
+msgid "<span weight=\"bold\">All tags</span>"
+msgstr "<span weight=\"bold\">Toutes les étiquettes</span>"
+
+#: GTG/taskbrowser/browser.py:755
+msgid "<span weight=\"bold\">Tasks without tags</span>"
+msgstr "<span weight=\"bold\">Tâches sans étiquette</span>"
+
+#: GTG/taskbrowser/browser.py:850
+msgid "(no active tasks)"
+msgstr "(pas de tâche active)"
+
+#: GTG/taskbrowser/browser.py:852
+msgid "(1 active task)"
+msgstr "(1 tâche active)"
+
+#: GTG/taskbrowser/browser.py:1487 GTG/taskbrowser/browser.py:1558
+#: GTG/taskbrowser/taskbrowser.glade.h:33
+msgid "Tags"
+msgstr "Étiquettes"
+
+#: GTG/taskbrowser/browser.py:1502 GTG/taskbrowser/browser.py:1585
+msgid "Title"
+msgstr "Titre"
+
+#: GTG/taskbrowser/browser.py:1521
+msgid "Due date"
+msgstr "Date de fin"
+
+#: GTG/taskbrowser/browser.py:1535
+msgid "Days left"
+msgstr "Jours restants"
+
+#: GTG/taskbrowser/browser.py:1573
+msgid "Closing date"
+msgstr "Date de cloture"
+
+#: GTG/taskbrowser/browser.py:1601
+msgid "Notes"
+msgstr "Notes"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
@@ -349,17 +424,17 @@ msgstr "Confirmer la suppression de la tâche"
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 msgstr "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
-msgid "Create a new task"
-msgstr "Créer une nouvelle tâche"
-
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
 msgstr "_Abandonner"
 
+#: GTG/taskbrowser/taskbrowser.glade.h:12 GTG/taskeditor/taskeditor.glade.h:3
+msgid "Delete"
+msgstr "Supprimer"
+
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr "Éditer"
+msgstr "Modifier"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
@@ -430,11 +505,6 @@ msgstr "Refaire"
 msgid "Tag is displayed in the workview"
 msgstr "Afficher l'étiquette dans la vue de travail"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
-#: GTG/taskbrowser/browser.py:1548
-msgid "Tags"
-msgstr "Étiquettes"
-
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
 msgstr "Annuler l'a_bandon"
@@ -496,129 +566,103 @@ msgid "_Work View"
 msgstr "Vue de _travail"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
+msgid "gtk-about"
+msgstr "gtk-about"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:50
 msgid "gtk-add"
 msgstr "gtk-add"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:50
+#: GTG/taskbrowser/taskbrowser.glade.h:51
 msgid "gtk-cancel"
 msgstr "gtk-cancel"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:51
+#: GTG/taskbrowser/taskbrowser.glade.h:52
+msgid "gtk-delete"
+msgstr "gtk-delete"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:53
+msgid "gtk-edit"
+msgstr "gtk-edit"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:54
 msgid "gtk-help"
 msgstr "gtk-help"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:52
+#: GTG/taskbrowser/taskbrowser.glade.h:55
 msgid "gtk-ok"
 msgstr "gtk-ok"
 
-#: GTG/taskbrowser/browser.py:107
-msgid "Mark the selected task as done"
-msgstr "Marquer la tâche sélectionnée comme faite"
+#: GTG/taskbrowser/taskbrowser.glade.h:56
+msgid "gtk-quit"
+msgstr "gtk-quit"
 
-#: GTG/taskbrowser/browser.py:108
-msgid "Edit the selected task"
-msgstr "Éditer la tâche sélectionée"
+#: GTG/taskbrowser/taskbrowser.glade.h:57
+msgid "gtk-redo"
+msgstr "gtk-redo"
 
-#: GTG/taskbrowser/browser.py:109
-msgid "Dismiss the selected task"
-msgstr "Abandonner la tâche sélectionnée"
+#: GTG/taskbrowser/taskbrowser.glade.h:58
+msgid "gtk-select-color"
+msgstr "gtk-select-color"
 
-#: GTG/taskbrowser/browser.py:111
-msgid "Create a new subtask"
-msgstr "Créer une nouvelle tâche enfant"
+#: GTG/taskbrowser/taskbrowser.glade.h:59
+msgid "gtk-undo"
+msgstr "gtk-undo"
 
-#: GTG/taskbrowser/browser.py:552
-msgid "monday"
-msgstr "lundi"
+#: GTG/taskeditor/editor.py:212
+msgid "Due tomorrow !"
+msgstr "Pour demain!"
 
-#: GTG/taskbrowser/browser.py:552
-msgid "tuesday"
-msgstr "mardi"
+#: GTG/taskeditor/editor.py:214
+#, python-format
+msgid "%s days left"
+msgstr "Il reste %s jours"
 
-#: GTG/taskbrowser/browser.py:552
-msgid "wednesday"
-msgstr "mercredi"
+#: GTG/taskeditor/editor.py:216
+msgid "Due today !"
+msgstr "Pour aujourd'hui!"
 
-#: GTG/taskbrowser/browser.py:553
-msgid "thursday"
-msgstr "jeudi"
+#: GTG/taskeditor/editor.py:218
+msgid "Due for yesterday"
+msgstr "Dépassé depuis hier"
 
-#: GTG/taskbrowser/browser.py:553
-msgid "friday"
-msgstr "vendredi"
+#: GTG/taskeditor/editor.py:220
+#, python-format
+msgid "Was %s days ago"
+msgstr "Dépassé depuis %s jours"
 
-#: GTG/taskbrowser/browser.py:553
-msgid "saturday"
-msgstr "samedi"
+#: GTG/taskeditor/taskeditor.glade.h:1
+msgid "<span weight=\"bold\">Due for</span>"
+msgstr "<span weight=\"bold\">A terminer pour</span>"
 
-#: GTG/taskbrowser/browser.py:554
-msgid "sunday"
-msgstr "dimanche"
+#: GTG/taskeditor/taskeditor.glade.h:2
+msgid "<span weight=\"bold\">Starting on</span>"
+msgstr "<span weight=\"bold\">Commence le</span>"
 
-#: GTG/taskbrowser/browser.py:563
-msgid "today"
-msgstr "aujourd'hui"
+#: GTG/taskeditor/taskeditor.glade.h:5
+msgid "Insert subtask"
+msgstr "Ajouter une sous-tâche"
 
-#: GTG/taskbrowser/browser.py:570
-msgid "tomorrow"
-msgstr "demain"
+#: GTG/taskeditor/taskeditor.glade.h:6
+msgid "Insert tag"
+msgstr "Ajouter une étiquette"
 
-#: GTG/taskbrowser/browser.py:631
-msgid "tags"
-msgstr "tags"
+#: GTG/taskeditor/taskeditor.glade.h:7
+msgid "Keep as Note"
+msgstr "Conserver comme note"
 
-#: GTG/taskbrowser/browser.py:634
-msgid "defer"
-msgstr "reporter"
-
-#: GTG/taskbrowser/browser.py:638
-msgid "due"
-msgstr "échéance"
-
-#: GTG/taskbrowser/browser.py:749
-msgid "<span weight=\"bold\">All tags</span>"
-msgstr "<span weight=\"bold\">Toutes les étiquettes</span>"
-
-#: GTG/taskbrowser/browser.py:750
-msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr "<span weight=\"bold\">Tâches sans étiquette</span>"
-
-#: GTG/taskbrowser/browser.py:845
-msgid "(no active tasks)"
-msgstr "(pas de tâche active)"
-
-#: GTG/taskbrowser/browser.py:847
-msgid "(1 active task)"
-msgstr "(1 tâche active)"
-
-#: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
-msgid "Title"
-msgstr "Titre"
-
-#: GTG/taskbrowser/browser.py:1511
-msgid "Due date"
-msgstr "Date de fin"
-
-#: GTG/taskbrowser/browser.py:1525
-msgid "Days left"
-msgstr "Jours restants"
-
-#: GTG/taskbrowser/browser.py:1563
-msgid "Closing date"
-msgstr "Date de cloture"
-
-#: GTG/taskbrowser/browser.py:1591
-msgid "Notes"
-msgstr "Notes"
-
-#: GTG/taskbrowser/__init__.py:29
-msgid "Mark as done"
+#: GTG/taskeditor/taskeditor.glade.h:8
+msgid "Mark Done"
 msgstr "Marquer comme fait"
 
-#: GTG/taskbrowser/__init__.py:30
-msgid "Mark as not done"
-msgstr "Marquer comme non fait"
+#: GTG/taskeditor/taskeditor.glade.h:9
+msgid "Task"
+msgstr "Tâche"
 
-#: GTG/taskbrowser/__init__.py:32
-msgid "Undismiss"
-msgstr "Annuler l'abandon"
+#: GTG/taskeditor/taskeditor.glade.h:10
+msgid "gtk-clear"
+msgstr "gtk-clear"
+
+#: GTG/taskeditor/taskeditor.glade.h:11
+msgid "gtk-close"
+msgstr "gtk-close"
