--- a/locales/gtg-nl.po
+++ b/locales/gtg-nl.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2009-04-01 12:00+0200\n"
+"POT-Creation-Date: 2009-04-03 20:19+0200\n"
 "PO-Revision-Date: 2009-04-01 12:21+0000\n"
 "Last-Translator: puccha <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-04-02 08:32+0000\n"
+"X-Launchpad-Export-Date: 2009-04-03 20:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/core/firstrun_tasks.py:6
@@ -200,64 +200,139 @@ msgid ""
 "your problem really quickly."
 msgstr ""
 
-#: GTG/taskeditor/editor.py:208
-msgid "Due tomorrow !"
-msgstr "Vervalt morgen!"
+#: GTG/taskbrowser/__init__.py:29
+msgid "Mark as done"
+msgstr "Markeren als gedaan"
 
-#: GTG/taskeditor/editor.py:210
-#, python-format
-msgid "%s days left"
-msgstr "%s dagen resterent"
+#: GTG/taskbrowser/__init__.py:30
+msgid "Mark the selected task as done"
+msgstr "Markeer de geslecteerde taak als gedaan"
 
-#: GTG/taskeditor/editor.py:212
-msgid "Due today !"
-msgstr "Vervalt vandaag!"
-
-#: GTG/taskeditor/editor.py:214
-msgid "Due for yesterday"
-msgstr "Gisteren vervallen"
-
-#: GTG/taskeditor/editor.py:216
-#, python-format
-msgid "Was %s days ago"
-msgstr "was %s dagen geleden"
-
-#: GTG/taskeditor/taskeditor.glade.h:1
-msgid "<span weight=\"bold\">Due for</span>"
-msgstr "<span weight=\"bold\">Vervalt op</span>"
-
-#: GTG/taskeditor/taskeditor.glade.h:2
-msgid "<span weight=\"bold\">Starting on</span>"
-msgstr "<span weight=\"bold\">Begint op</span>"
-
-#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
-msgid "Delete"
-msgstr "Verwijder"
-
-#: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
+msgid "Mark as not done"
+msgstr "Markeren als niet gedaan"
+
+#: GTG/taskbrowser/__init__.py:32 GTG/taskbrowser/__init__.py:36
+msgid "Mark the selected task as to be done"
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:33 GTG/taskbrowser/taskbrowser.glade.h:13
+#: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Dismiss"
 msgstr "Afwijzen"
 
-#: GTG/taskeditor/taskeditor.glade.h:5
-msgid "Insert subtask"
-msgstr "Subtaak toevoegen"
+#: GTG/taskbrowser/__init__.py:34
+msgid "Mark the task as not to be done anymore"
+msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:6
-msgid "Insert tag"
-msgstr "Label toevoegen"
+#: GTG/taskbrowser/__init__.py:35
+msgid "Undismiss"
+msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:7
-msgid "Keep as Note"
-msgstr "Bewaar als notitie"
+#: GTG/taskbrowser/__init__.py:37
+msgid "Permanently remove the selected task"
+msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:8
-msgid "Mark Done"
-msgstr "Markeer als gedaan"
+#: GTG/taskbrowser/browser.py:109
+msgid "Edit the selected task"
+msgstr "Bewerk de geselecteerde taak"
 
-#: GTG/taskeditor/taskeditor.glade.h:9
-msgid "Task"
-msgstr "Taak"
+#: GTG/taskbrowser/browser.py:111 GTG/taskbrowser/taskbrowser.glade.h:10
+msgid "Create a new task"
+msgstr "Nieuwe taak aanmaken"
+
+#: GTG/taskbrowser/browser.py:112
+msgid "Create a new subtask"
+msgstr "Nieuwe subtaak maken"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "monday"
+msgstr "maandag"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "tuesday"
+msgstr "dinsdag"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "wednesday"
+msgstr "woensdag"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "thursday"
+msgstr "donderdag"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "friday"
+msgstr "vrijdag"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "saturday"
+msgstr "zaterdag"
+
+#: GTG/taskbrowser/browser.py:559
+msgid "sunday"
+msgstr "zondag"
+
+#: GTG/taskbrowser/browser.py:568
+msgid "today"
+msgstr "vandaag"
+
+#: GTG/taskbrowser/browser.py:575
+msgid "tomorrow"
+msgstr "morgen"
+
+#: GTG/taskbrowser/browser.py:636
+msgid "tags"
+msgstr "labels"
+
+#: GTG/taskbrowser/browser.py:639
+msgid "defer"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:643
+msgid "due"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:754
+msgid "<span weight=\"bold\">All tags</span>"
+msgstr "<span weight=\"bold\">Alle labels</span>"
+
+#: GTG/taskbrowser/browser.py:755
+msgid "<span weight=\"bold\">Tasks without tags</span>"
+msgstr "<span weight=\"bold\">Taken zonder labels</span>"
+
+#: GTG/taskbrowser/browser.py:850
+msgid "(no active tasks)"
+msgstr "(geen actieve taken)"
+
+#: GTG/taskbrowser/browser.py:852
+msgid "(1 active task)"
+msgstr "(1 actieve taak)"
+
+#: GTG/taskbrowser/browser.py:1487 GTG/taskbrowser/browser.py:1558
+#: GTG/taskbrowser/taskbrowser.glade.h:33
+msgid "Tags"
+msgstr "Labels"
+
+#: GTG/taskbrowser/browser.py:1502 GTG/taskbrowser/browser.py:1585
+msgid "Title"
+msgstr "Titel"
+
+#: GTG/taskbrowser/browser.py:1521
+msgid "Due date"
+msgstr "Vervaldatum"
+
+#: GTG/taskbrowser/browser.py:1535
+msgid "Days left"
+msgstr "Dagen resterend"
+
+#: GTG/taskbrowser/browser.py:1573
+msgid "Closing date"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:1601
+msgid "Notes"
+msgstr "Notities"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
@@ -295,13 +370,13 @@ msgstr "Bevestig verwijderen van taak"
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 msgstr "Auteursrecht© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
-#: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
-msgid "Create a new task"
-msgstr "Nieuwe taak aanmaken"
-
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
 msgstr ""
+
+#: GTG/taskbrowser/taskbrowser.glade.h:12 GTG/taskeditor/taskeditor.glade.h:3
+msgid "Delete"
+msgstr "Verwijder"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
@@ -376,11 +451,6 @@ msgstr "Opnieuw"
 msgid "Tag is displayed in the workview"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
-#: GTG/taskbrowser/browser.py:1548
-msgid "Tags"
-msgstr "Labels"
-
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
 msgstr ""
@@ -442,129 +512,103 @@ msgid "_Work View"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
-msgid "gtk-add"
+msgid "gtk-about"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:50
-msgid "gtk-cancel"
+msgid "gtk-add"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:51
-msgid "gtk-help"
+msgid "gtk-cancel"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
+msgid "gtk-delete"
+msgstr ""
+
+#: GTG/taskbrowser/taskbrowser.glade.h:53
+msgid "gtk-edit"
+msgstr ""
+
+#: GTG/taskbrowser/taskbrowser.glade.h:54
+msgid "gtk-help"
+msgstr ""
+
+#: GTG/taskbrowser/taskbrowser.glade.h:55
 msgid "gtk-ok"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:107
-msgid "Mark the selected task as done"
-msgstr "Markeer de geslecteerde taak als gedaan"
-
-#: GTG/taskbrowser/browser.py:108
-msgid "Edit the selected task"
-msgstr "Bewerk de geselecteerde taak"
-
-#: GTG/taskbrowser/browser.py:109
-msgid "Dismiss the selected task"
+#: GTG/taskbrowser/taskbrowser.glade.h:56
+msgid "gtk-quit"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:111
-msgid "Create a new subtask"
-msgstr "Nieuwe subtaak maken"
-
-#: GTG/taskbrowser/browser.py:552
-msgid "monday"
-msgstr "maandag"
-
-#: GTG/taskbrowser/browser.py:552
-msgid "tuesday"
-msgstr "dinsdag"
-
-#: GTG/taskbrowser/browser.py:552
-msgid "wednesday"
-msgstr "woensdag"
-
-#: GTG/taskbrowser/browser.py:553
-msgid "thursday"
-msgstr "donderdag"
-
-#: GTG/taskbrowser/browser.py:553
-msgid "friday"
-msgstr "vrijdag"
-
-#: GTG/taskbrowser/browser.py:553
-msgid "saturday"
-msgstr "zaterdag"
-
-#: GTG/taskbrowser/browser.py:554
-msgid "sunday"
-msgstr "zondag"
-
-#: GTG/taskbrowser/browser.py:563
-msgid "today"
-msgstr "vandaag"
-
-#: GTG/taskbrowser/browser.py:570
-msgid "tomorrow"
-msgstr "morgen"
-
-#: GTG/taskbrowser/browser.py:631
-msgid "tags"
-msgstr "labels"
-
-#: GTG/taskbrowser/browser.py:634
-msgid "defer"
+#: GTG/taskbrowser/taskbrowser.glade.h:57
+msgid "gtk-redo"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:638
-msgid "due"
+#: GTG/taskbrowser/taskbrowser.glade.h:58
+msgid "gtk-select-color"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:749
-msgid "<span weight=\"bold\">All tags</span>"
-msgstr "<span weight=\"bold\">Alle labels</span>"
-
-#: GTG/taskbrowser/browser.py:750
-msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr "<span weight=\"bold\">Taken zonder labels</span>"
-
-#: GTG/taskbrowser/browser.py:845
-msgid "(no active tasks)"
-msgstr "(geen actieve taken)"
-
-#: GTG/taskbrowser/browser.py:847
-msgid "(1 active task)"
-msgstr "(1 actieve taak)"
-
-#: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
-msgid "Title"
-msgstr "Titel"
-
-#: GTG/taskbrowser/browser.py:1511
-msgid "Due date"
-msgstr "Vervaldatum"
-
-#: GTG/taskbrowser/browser.py:1525
-msgid "Days left"
-msgstr "Dagen resterend"
-
-#: GTG/taskbrowser/browser.py:1563
-msgid "Closing date"
+#: GTG/taskbrowser/taskbrowser.glade.h:59
+msgid "gtk-undo"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1591
-msgid "Notes"
-msgstr "Notities"
+#: GTG/taskeditor/editor.py:212
+msgid "Due tomorrow !"
+msgstr "Vervalt morgen!"
 
-#: GTG/taskbrowser/__init__.py:29
-msgid "Mark as done"
-msgstr "Markeren als gedaan"
+#: GTG/taskeditor/editor.py:214
+#, python-format
+msgid "%s days left"
+msgstr "%s dagen resterent"
 
-#: GTG/taskbrowser/__init__.py:30
-msgid "Mark as not done"
-msgstr "Markeren als niet gedaan"
+#: GTG/taskeditor/editor.py:216
+msgid "Due today !"
+msgstr "Vervalt vandaag!"
 
-#: GTG/taskbrowser/__init__.py:32
-msgid "Undismiss"
+#: GTG/taskeditor/editor.py:218
+msgid "Due for yesterday"
+msgstr "Gisteren vervallen"
+
+#: GTG/taskeditor/editor.py:220
+#, python-format
+msgid "Was %s days ago"
+msgstr "was %s dagen geleden"
+
+#: GTG/taskeditor/taskeditor.glade.h:1
+msgid "<span weight=\"bold\">Due for</span>"
+msgstr "<span weight=\"bold\">Vervalt op</span>"
+
+#: GTG/taskeditor/taskeditor.glade.h:2
+msgid "<span weight=\"bold\">Starting on</span>"
+msgstr "<span weight=\"bold\">Begint op</span>"
+
+#: GTG/taskeditor/taskeditor.glade.h:5
+msgid "Insert subtask"
+msgstr "Subtaak toevoegen"
+
+#: GTG/taskeditor/taskeditor.glade.h:6
+msgid "Insert tag"
+msgstr "Label toevoegen"
+
+#: GTG/taskeditor/taskeditor.glade.h:7
+msgid "Keep as Note"
+msgstr "Bewaar als notitie"
+
+#: GTG/taskeditor/taskeditor.glade.h:8
+msgid "Mark Done"
+msgstr "Markeer als gedaan"
+
+#: GTG/taskeditor/taskeditor.glade.h:9
+msgid "Task"
+msgstr "Taak"
+
+#: GTG/taskeditor/taskeditor.glade.h:10
+msgid "gtk-clear"
+msgstr ""
+
+#: GTG/taskeditor/taskeditor.glade.h:11
+msgid "gtk-close"
 msgstr ""
