finally fix bug #359469

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+    * Title for newly created task is now selected to allow easy editing
+    * Fixed some bugs in the task editor
+
 2009-04-01 Getting Things GNOME! 0.1.1
 	* New icon from Kalle Persson
 	* Translations are now possible
