Apply patch from ekspiulo, fixes bug #374745

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,7 @@ For 0.1.1:
 * Luca Falavigna <dktrkranz@ubuntu.com>
 * Kalle Persson <kalle@kallepersson.se>
 * Jonathan Barnoud <jonathan@barnoud.net>
+
+For current:
+------------
+* ekspiulo <ekspiulo@gmail.com>
