Updated changelog and authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,3 +24,4 @@ For current:
 ------------
 * ekspiulo <ekspiulo@gmail.com>
 * Tomasz Maciejewski <ponton@jabster.pl>
+* Ben Dowling <ben.m.dowling@gmail.com>
