2009-07-04 Getting Things GNOME! 0.1.2-rc1     * Available in 18 languages, with 12 languages being more than 99% translated     * Shadows around the listview widgets, by Jean-François Fortin Tam     * Fixes package dependencies     * Tooltips for button     * Automatically select title in task editor     * Crash on startup with non empty LANGUAGE envvar     * Use GNOME settings for toolbar, by Anton Rebguns     * Better tag markup handling     * No more multiple instances     * HTTP link parsing by Ben Dowling     * Update README by Michael Vogt     * Update XML files sooner by Michael Vogt     * Remember color (by Zach Sheperd)     * URLs can now include ';' characters. Fixes bug 360969     * Added support for opening subtasks and links with the keyboard: Fixes bug 369272, by Ben Dowling     * Add polish translation by Tomasz Maciejewski     * Apply patch to fix bug #326388 by Brian Kennedy     * Apply patch to fix bug #374745 by Brian Kennedy     * Title for newly created task is now selected to allow easy editing     * Apply patch to fix bug #374745 by Brian Kennedy     * Fixed some bugs in the task editor

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,9 +20,14 @@ For 0.1.1:
 * Kalle Persson <kalle@kallepersson.se>
 * Jonathan Barnoud <jonathan@barnoud.net>
 
+For 0.1.2:
+----------
+* Brian Kennedy <ekspiulo@gmail.com>
+* Michael Vogt <michael.vogt@ubuntu.com>
+* Ben Dowling <ben.m.dowling@gmail.com>
+* Zach Shepherd <eightball1989@gmail.com>
+* Anton Rebguns <arebgun@gmail.com>
+* Jean-François Fortin Tam <nekohayo@gmail.com>
+
 For current:
 ------------
-* ekspiulo <ekspiulo@gmail.com>
-* Tomasz Maciejewski <ponton@jabster.pl>
-* Ben Dowling <ben.m.dowling@gmail.com>
-* Zach Sheperd <eightball1989@gmail.com>
