--- a/locales/gtg-pl.po
+++ b/locales/gtg-pl.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-15 15:13+0200\n"
-"PO-Revision-Date: 2009-05-30 22:10+0200\n"
+"PO-Revision-Date: 2009-06-02 12:36+0000\n"
 "Last-Translator: Tomasz Maciejewski <ponton@jabster.pl>\n"
 "Language-Team: Polish <ponton@jabster.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: utf-8\n"
-"X-Launchpad-Export-Date: 2009-05-30 18:16+0000\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2009-07-04 13:00+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
@@ -95,13 +95,13 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
-"<span weight=\"bold\" size=\"large\">Are you sure you want delete this task?"
-"</span>\n"
+"<span weight=\"bold\" size=\"large\">Are you sure you want delete this "
+"task?</span>\n"
 "\n"
 "Deleting a task cannot be undone."
 msgstr ""
-"<span weight=\"bold\" size=\"large\">Czy na pewno chcesz usunąć to zadanie?</"
-"span>\n"
+"<span weight=\"bold\" size=\"large\">Czy na pewno chcesz usunąć to "
+"zadanie?</span>\n"
 "\n"
 "Tej czynności nie da się cofnąć."
 
@@ -495,7 +495,8 @@ msgstr "Pozostałe rzeczy, które powinieneś przeczytać:"
 msgid ""
 "We hope that you will appreciate GTG. Please send us bug reports and ideas "
 "for improvement using : "
-msgstr "Mamy nadzieję, że docenisz GTG. Zgłaszaj nam wszelkie błędy i pomysły."
+msgstr ""
+"Mamy nadzieję, że docenisz GTG. Zgłaszaj nam wszelkie błędy i pomysły. "
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
@@ -522,7 +523,8 @@ msgid "You can also use the &quot;insert subtask&quot; button."
 msgstr "Możesz także użyć przycisku &quot;Wstaw zadanie podrzędne&quot;."
 
 #: GTG/core/firstrun_tasks.py:38
-msgid "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
+msgid ""
+"Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
 "Zadania i zadania podrzędne mogą być szeregowane metodą przeciągnij-i-upuść."
 
@@ -605,7 +607,8 @@ msgstr ""
 "zostaną wyświetlone."
 
 #: GTG/core/firstrun_tasks.py:66
-msgid "What is an actionable task? It's a task you can do directly, right now."
+msgid ""
+"What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
 "Co to jest zadanie z akcjami? To zadanie, które możesz od razu zacząć "
 "wykonywać."
