--- a/locales/gtg-tr.po
+++ b/locales/gtg-tr.po
@@ -1,17 +1,205 @@
-#, fuzzy
+# Turkish translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-15 15:13+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-08 05:10+0000\n"
+"Last-Translator: Murat Güneş <mgunes@ubuntu.com>\n"
+"Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2009-07-04 13:00+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
+
+#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
+msgid "Delete"
+msgstr "Sil"
+
+#: GTG/taskeditor/taskeditor.glade.h:6
+msgid "Insert tag"
+msgstr "Etiket ekle"
+
+#: GTG/taskeditor/taskeditor.glade.h:9
+msgid "Task"
+msgstr "Görev"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:6
+msgid "About GTG!"
+msgstr "GTG Hakkında!"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
+msgid "Create a new task"
+msgstr "Yeni bir görev oluştur"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:14
+msgid "Edit"
+msgstr "Düzenle"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:15
+msgid "GTG website"
+msgstr "GTG web sayfası"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:16
+msgid "Getting Things Gnome!"
+msgstr "Getting Things Gnome!"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:25
+msgid "New Note"
+msgstr "Yeni Not"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:26
+msgid "New Subtask"
+msgstr "Yeni Alt Görev"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:27
+msgid "New Task"
+msgstr "Yeni Görev"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:29
+msgid "New _Task"
+msgstr "Yeni _Görev"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:31
+msgid "Redo"
+msgstr "Yinele"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1486
+#: GTG/taskbrowser/browser.py:1557
+msgid "Tags"
+msgstr "Etiketler"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:35
+msgid "Undo"
+msgstr "Geri Al"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:40
+msgid "_Edit"
+msgstr "_Düzenle"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:41
+msgid "_File"
+msgstr "_Dosya"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:42
+msgid "_Help"
+msgstr "_Yardım"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:46
+msgid "_Tasks"
+msgstr "_Görevler"
+
+#: GTG/taskbrowser/taskbrowser.glade.h:47
+msgid "_View"
+msgstr "_Görünüm"
+
+#: GTG/taskbrowser/__init__.py:29
+msgid "Mark as done"
+msgstr "Yapılmış olarak işaretle"
+
+#: GTG/taskbrowser/__init__.py:31
+msgid "Mark as not done"
+msgstr "Yapılmamış olarak işaretle"
+
+#: GTG/taskbrowser/browser.py:111
+msgid "Create a new subtask"
+msgstr "Yeni bir alt görev oluştur"
+
+#: GTG/taskbrowser/browser.py:556
+msgid "monday"
+msgstr "pazaresi"
+
+#: GTG/taskbrowser/browser.py:556
+msgid "tuesday"
+msgstr "salı"
+
+#: GTG/taskbrowser/browser.py:556
+msgid "wednesday"
+msgstr "çarşamba"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "thursday"
+msgstr "perşembe"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "friday"
+msgstr "cuma"
+
+#: GTG/taskbrowser/browser.py:557
+msgid "saturday"
+msgstr "cumartesi"
+
+#: GTG/taskbrowser/browser.py:558
+msgid "sunday"
+msgstr "pazar"
+
+#: GTG/taskbrowser/browser.py:567
+msgid "today"
+msgstr "bugün"
+
+#: GTG/taskbrowser/browser.py:574
+msgid "tomorrow"
+msgstr "yarın"
+
+#: GTG/taskbrowser/browser.py:635
+msgid "tags"
+msgstr "etiketler"
+
+#: GTG/taskbrowser/browser.py:638
+msgid "defer"
+msgstr "ertele"
+
+#: GTG/taskbrowser/browser.py:1501 GTG/taskbrowser/browser.py:1584
+msgid "Title"
+msgstr "Başlık"
+
+#: GTG/taskbrowser/browser.py:1600
+msgid "Notes"
+msgstr "Notlar"
+
+#: GTG/core/firstrun_tasks.py:6
+msgid "Getting started with GTG"
+msgstr "GTG'ye başlamak"
+
+#: GTG/core/firstrun_tasks.py:7
+msgid "Welcome in Getting Things Gnome!, your new task manager."
+msgstr "Yeni görev yöneticiniz Getting Things Gnome!'a hoşgeldiniz."
+
+#: GTG/core/firstrun_tasks.py:9
+msgid ""
+"In GTG, everything is a task. From building a bridge over the Pacific Ocean "
+"to changing a light bulb or organizing a party. When you edit a task, it is "
+"automatically saved."
+msgstr "GTG'de her şey bir görevdir."
+
+#: GTG/core/firstrun_tasks.py:17
+msgid "Don't forget to mark this subtask as done !"
+msgstr "Bu alt görevi yapılmış olarak işaretlemeyi unutmayın!"
+
+#: GTG/core/firstrun_tasks.py:19
+msgid "Other stuff you should read :"
+msgstr "Okumanız gereken başka şeyler:"
+
+#: GTG/core/firstrun_tasks.py:28
+msgid "Thank you for trying out GTG :-)"
+msgstr "GTG'yi denediğiniz için teşekkürler :-)"
+
+#: GTG/core/firstrun_tasks.py:33
+msgid "Learn to use subtasks"
+msgstr "Alt görevleri kullanmayı öğrenin"
+
+#: GTG/core/firstrun_tasks.py:47
+msgid "Learn to use tags"
+msgstr "Etiketleri kullanmayı öğrenin"
+
+#: GTG/core/firstrun_tasks.py:50
+msgid "Try to type a word beginning with @ here :"
+msgstr "Buraya @ ile başlayan bir kelime yazmayı deneyin :"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
@@ -19,10 +207,6 @@ msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
-msgid "Delete"
 msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
@@ -34,20 +218,12 @@ msgstr ""
 msgid "Insert subtask"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:6
-msgid "Insert tag"
-msgstr ""
-
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
 msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:9
-msgid "Task"
 msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:10
@@ -94,10 +270,6 @@ msgid ""
 "Deleting a task cannot be undone."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:6
-msgid "About GTG!"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
 msgstr ""
@@ -110,24 +282,8 @@ msgstr ""
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
-msgid "Create a new task"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:14
-msgid "Edit"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:15
-msgid "GTG website"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:16
-msgid "Getting Things Gnome!"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
@@ -159,49 +315,20 @@ msgstr ""
 msgid "Mark as _Done"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:25
-msgid "New Note"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:26
-msgid "New Subtask"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:27
-msgid "New Task"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:29
-msgid "New _Task"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:30
 msgid "Permanently _remove task"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:31
-msgid "Redo"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:32
 msgid "Tag is displayed in the workview"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1486
-#: GTG/taskbrowser/browser.py:1557
-msgid "Tags"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:35
-msgid "Undo"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
@@ -220,18 +347,6 @@ msgstr ""
 msgid "_Closed Tasks Pane"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:40
-msgid "_Edit"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:41
-msgid "_File"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:42
-msgid "_Help"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
 msgstr ""
@@ -242,14 +357,6 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:45
 msgid "_Tags Sidebar"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:46
-msgid "_Tasks"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:47
-msgid "_View"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
@@ -300,16 +407,8 @@ msgstr ""
 msgid "gtk-undo"
 msgstr ""
 
-#: GTG/taskbrowser/__init__.py:29
-msgid "Mark as done"
-msgstr ""
-
 #: GTG/taskbrowser/__init__.py:30
 msgid "Mark the selected task as done"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:31
-msgid "Mark as not done"
 msgstr ""
 
 #: GTG/taskbrowser/__init__.py:32 GTG/taskbrowser/__init__.py:36
@@ -332,54 +431,6 @@ msgstr ""
 msgid "Edit the selected task"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:111
-msgid "Create a new subtask"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:556
-msgid "monday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:556
-msgid "tuesday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:556
-msgid "wednesday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:557
-msgid "thursday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:557
-msgid "friday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:557
-msgid "saturday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:558
-msgid "sunday"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:567
-msgid "today"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:574
-msgid "tomorrow"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:635
-msgid "tags"
-msgstr ""
-
-#: GTG/taskbrowser/browser.py:638
-msgid "defer"
-msgstr ""
-
 #: GTG/taskbrowser/browser.py:642
 msgid "due"
 msgstr ""
@@ -400,10 +451,6 @@ msgstr ""
 msgid "(1 active task)"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1501 GTG/taskbrowser/browser.py:1584
-msgid "Title"
-msgstr ""
-
 #: GTG/taskbrowser/browser.py:1520
 msgid "Due date"
 msgstr ""
@@ -416,27 +463,8 @@ msgstr ""
 msgid "Closing date"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1600
-msgid "Notes"
-msgstr ""
-
 #: GTG/core/task.py:36
 msgid "My new task"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:6
-msgid "Getting started with GTG"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:7
-msgid "Welcome in Getting Things Gnome!, your new task manager."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:9
-msgid ""
-"In GTG, everything is a task. From building a bridge over the Pacific Ocean "
-"to changing a light bulb or organizing a party. When you edit a task, it is "
-"automatically saved."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:11
@@ -451,26 +479,10 @@ msgid ""
 "description. Simply click on the following link :"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:17
-msgid "Don't forget to mark this subtask as done !"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:19
-msgid "Other stuff you should read :"
-msgstr ""
-
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
 "We hope that you will appreciate GTG. Please send us bug reports and ideas "
 "for improvement using : "
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:28
-msgid "Thank you for trying out GTG :-)"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:33
-msgid "Learn to use subtasks"
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:34
@@ -500,16 +512,8 @@ msgstr ""
 msgid "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:47
-msgid "Learn to use tags"
-msgstr ""
-
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:50
-msgid "Try to type a word beginning with @ here :"
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:52
