--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+    * DBus interface by Ryan Paul
+
 2009-07-04 Getting Things GNOME! 0.1.2
     * Available in 18 languages, with 12 languages being more than 99% translated
     * Shadows around the listview widgets, by Jean-François Fortin Tam  
