--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
     * New keyboard bindings for 'Mark as done' and 'Dismiss' actions
     * New keyboard bindings and accelerators by Jonathan Lange
     * DBus interface by Ryan Paul
+    * Remove the 'Delete' button from the toolbar by Jonathan Lange
 
 2009-07-04 Getting Things GNOME! 0.1.2
     * Available in 18 languages, with 12 languages being more than 99% translated
