Fix the spelling mistake in the manpage and tighten up the prose a bit.

--- a/doc/gtg.1
+++ b/doc/gtg.1
@@ -8,9 +8,9 @@ Getting Things GNOME! is an organizer for the GNOME desktop environment.
 GTG focuses on usability and ease of use. Its main objective is to
 provide a simple and yet flexible organization tool for life and work.
 .PP
-GTG uses a very handy text edition system for task creation and edition.
-The task editor can automatically recognize metadata such as tags and subtasks
-only by the use of a very simple syntax.
+GTG uses a very handy system for creating and editing tasks. The task editor
+can automatically recognize metadata such as tags and subtasks only by the use
+of a very simple syntax.
 .SH COPYRIGHT
 This manual page is Copyright 2009 Luca Falavigna <dktrkranz@ubuntu.com>.
 Permission is granted to copy, distribute and/or modify this document
