--- a/HACKING
+++ b/HACKING
@@ -122,3 +122,28 @@ Landing Branches
   6. Update ``AUTHORS`` if the patch author is not already in there.
 
   7. Merge the branch into trunk, then commit!
+
+
+Documentation
+-------------
+
+We'd love it so much if you could improve the docstrings that you find in GTG.
+
+We use the docstring conventions outlined in PEP 8
+<http://www.python.org/dev/peps/pep-0008/> and PEP 257
+<http://www.python.org/dev/peps/pep-0257/>, except modified to support epytext
+markup. Information on epytext markup can be found at
+<http://epydoc.sourceforge.net/epytext.html>.
+
+You can generate the API docs by running::
+
+  make apidocs
+
+This builds the API documentation inside ``doc/api`` in your working tree. If
+you are running GNOME, you can open it in your browser with::
+
+  gnome-open doc/api/index.html
+
+Remember, docstrings should be written for people who don't know much about
+the code. Focus on ''why'' things are the way they are, and on describing
+''what'' they are in the first place.
