--- a/AUTHORS
+++ b/AUTHORS
@@ -33,3 +33,4 @@ For current:
 ------------
 * Ryan Paul <segphault@arstechnica.com>
 * Jonathan Lange <jml@mumak.net>
+* Kevin Mehall <km@kevinmehall.net>
