Updating CHANGELOG, AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,3 +34,4 @@ For current:
 * Ryan Paul <segphault@arstechnica.com>
 * Jonathan Lange <jml@mumak.net>
 * Kevin Mehall <km@kevinmehall.net>
+* Patrick Coleman <blinken@gmail.com>
