--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+	* Add Ctrl-W accelerator to close a task by Patrick Coleman
     * When GTG is already running, use DBUS to raise existing instance rather than failing silently
     * Refactorization and PEP8ification work by Jonathan Lange
     * New keyboard bindings for 'Mark as done' and 'Dismiss' actions
