even more tidying up

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,7 +15,7 @@
     * DBus interface by Ryan Paul
     * Remove the 'Delete' button from the toolbar by Jonathan Lange
     * Fix a spelling mistake in the manpage by Jonathan Lange
-    * Deleting a task will also delete all subtasks
+    * Deleting a task will also delete all subtasks by Mikkel Kjær Jensen
 
 2009-07-04 Getting Things GNOME! 0.1.2
     * Available in 18 languages, with 12 languages being more than 99% translated
