Trying to get rid of bzr stuff

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-    * The toolbar can now be hidden
+    * Empty new tasks are deleted when editor is closed
+    * lot of bug fixed in the editor while playing with subtasks
+    * Works well with the "text besides icon" GNOME option
+    * The toolbar can now be hidden by Mikkel Kjær Jensen
     * Merge RTM plugin branch from Luca Invernizzi
     * i18n: fixed window title in GTG/taskbrowser/browser.py, by Dario Bertini 
     * Patch from Luca Invernizzi to add XDG_CACHE redefinition in script/debug.sh
