Fixed my entry in AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,4 +38,4 @@ For current:
 * Patrick Coleman <blinken@gmail.com>
 * Luca Invernizzi <invernizzi.l@gmail.com>
 * Mikkel Kjær Jensen <kjmikkel@gmail.com>
-* Henning Eggers
+* Henning Eggers <henning@ubuntu.com>
