Update authors, changelog, etc. For 0.2

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,10 @@ The GTG Team:
 
 * Lionel Dricot <ploum@ploum.net>
 * Bertrand Rousseau <bertrand.rousseau@gmail.com>
+* Paulo Cabido <paulo.cabido@gmail.com>
+* Kevin Mehall <km@kevinmehall.net>
+* Luca Invernizzi <invernizzi.l@gmail.com>
+* Luca Falavigna <dktrkranz@debian.org>
 
 Thanks to the contributors!
 ===========================
@@ -29,13 +33,14 @@ For 0.1.2:
 * Anton Rebguns <arebgun@gmail.com>
 * Jean-François Fortin Tam <nekohayo@gmail.com>
 
-For current:
+For 0.2:
 ------------
 * Ryan Paul <segphault@arstechnica.com>
 * Jonathan Lange <jml@mumak.net>
-* Kevin Mehall <km@kevinmehall.net>
-* Paulo Cabido <paulo.cabido@gmail.com>
 * Patrick Coleman <blinken@gmail.com>
-* Luca Invernizzi <invernizzi.l@gmail.com>
 * Mikkel Kjær Jensen <kjmikkel@gmail.com>
 * Henning Eggers <henning@ubuntu.com>
+* Paulo Cabido <paulo.cabido@gmail.com>
+* Kevin Mehall <km@kevinmehall.net>
+* Luca Invernizzi <invernizzi.l@gmail.com>
+* Luca Falavigna <dktrkranz@debian.org>
