Restore closed tasks filtering by selected tag, fixes bug #498857

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+    * Restore closed tasks filtering by selected tag, fixes bug #498857
     * Temporary fix allowing to reset tag color by Matthew Rasmus
 
 2009-12-11 Getting THings GNOME! 0.2
