Updated man page to list "-d" as an option

--- a/doc/gtg.1
+++ b/doc/gtg.1
@@ -2,7 +2,7 @@
 .SH NAME
 gtg \-  Getting Things Gnome!, an organizer for the GNOME desktop
 .SH SYNOPSIS
-.B gtg
+.B gtg [-d]
 .SH DESCRIPTION
 Getting Things GNOME! is an organizer for the GNOME desktop environment.
 GTG focuses on usability and ease of use. Its main objective is to
@@ -11,6 +11,10 @@ provide a simple and yet flexible organization tool for life and work.
 GTG uses a very handy system for creating and editing tasks. The task editor
 can automatically recognize metadata such as tags and subtasks only by the use
 of a very simple syntax.
+.SH OPTIONS
+.TP
+\fB-d\fB
+Enables the debug mode, useful for understanding and reporting bugs
 .SH COPYRIGHT
 This manual page is Copyright 2009 Luca Falavigna <dktrkranz@debian.org>.
 Permission is granted to copy, distribute and/or modify this document
