Update CHANGELOG and AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,4 +47,5 @@ For 0.2:
 
 For current:
 ------------
-Matthew Rasmus <tareth.ml@gmail.com>
+* Matthew Rasmus <tareth.ml@gmail.com>
+* Bryce Harrington <bryce@bryceharrington.org>
