--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 2009-12-11 Getting Things GNOME! 0.2.1
+    * Improved export feature by Bryce Harrington and Luca Invernizzi
     * Restore closed tasks filtering by selected tag, fixes bug #498857
     * Temporary fix allowing to reset tag color by Matthew Rasmus
     * Added the ability to add a tag from the right click menu in the task browser, by Matthew Rasmus.
