Update of AUTHORS and CHANGELOG

--- a/AUTHORS
+++ b/AUTHORS
@@ -45,7 +45,7 @@ For 0.2:
 * Luca Invernizzi <invernizzi.l@gmail.com>
 * Luca Falavigna <dktrkranz@debian.org>
 
-For current:
-------------
+For 0.2.1:
+----------
 * Matthew Rasmus <tareth.ml@gmail.com>
 * Bryce Harrington <bryce@bryceharrington.org>
