changelog updated (I have to start to remember this part)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+    * RTM plugin now sycs tags
+
 2009-12-11 Getting Things GNOME! 0.2.1
     * Schedule for context menu by Bryce Harrington
     * Improved export feature by Bryce Harrington and Luca Invernizzi
