Fix bug #511651: strip out the initial space(s) at the beginning of the line

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+    * Fix bug #511651, white space around title, by mrk
     * Expanded CLI to gtg to support task descriptions by Bryce Harrington
     * Added a guide to plugins by Chris Johnston
     * RTM plugin tags synchronization by Luca Invernizzi
