Update AUTHORS and CHANGELOG

--- a/AUTHORS
+++ b/AUTHORS
@@ -54,3 +54,4 @@ For 0.3:
 ----------
 * Chris Johnston <chrisjohnston@ubuntu.com>
 * Tom Van Braeckel <tomvanbraeckel@gmail.com>
+* Lionel Montrieux <lmontrieux@spancircle.be>
