Update apidocs directions and makefile.  Seems a few options are no longer valid in the pydoctor available in Ubuntu Lucid, and according to jml were just hacks around errors in Karmic that I don't reproduce with the current pydoctor.
  http://code.mumak.net/2009/07/documenting-python-project.html

--- a/HACKING
+++ b/HACKING
@@ -135,7 +135,8 @@ We use the docstring conventions outlined in PEP 8
 markup. Information on epytext markup can be found at
 <http://epydoc.sourceforge.net/epytext.html>.
 
-You can generate the API docs by running::
+You can generate the API docs by installing pydoctor
+(``python-pydoctor`` in debian/ubuntu) and then running::
 
   make apidocs
 
