Using ngettext for singular/plural translations (fixes #526420, thanks              David Planella! -- added to GTG authors)

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,5 +57,9 @@ For 0.2.2:
 * Lionel Montrieux <lmontrieux@spancircle.be>
 * Paul Kishimoto <mail@paul.kishimoto.name>
 
+For 0.2.4:
+----------
+* David Planella <david.planella@jabber.org>
+
 For 0.3:
 ----------
